--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -214,7 +214,6 @@
 		box-shadow: 0 0 20px #e4e4e4
 }
 
-		
     </style>
 
 </head>
@@ -283,7 +282,11 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<h1>All Games</h1>
-						<p>where happiness is met</p>
+						<p>
+						<span class="blue">where</span>
+							<span class="black"> happiness</span>
+							<span class="pink">is met</span>
+						</p>
 					</div>
 				</div>
 			</div>
