--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -256,8 +256,8 @@ ul li{
 				<div class="col-lg-12 text-center">
 					<div class="pagination-wrap">
 						<ul>
-							<li><a class="active" href="#">Prev</a></li>
-							<li><a href="#">1</a></li>
+							<li><a href="#">Prev</a></li>
+							<li><a class="active" href="#">1</a></li>
 							<li><a href="#">2</a></li>
 							<li><a href="#">3</a></li>
 							<li><a href="#">Next</a></li>
