--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -116,6 +116,7 @@
 						</nav>
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
+						<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp</div>
 					</div>
 				</div>
 			</div>
@@ -172,11 +173,11 @@
 				<div class="col-lg-4 col-md-6 text-center berry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="{% url 'game_info_page' %}?img=2"><img src="{% static 'img/Games/game2.png' %}" alt=""></a>
+							<a href="{% url 'game_info_page' %}?img=6"><img src="{% static 'img/Games/game6.png' %}" alt=""></a>
 						</div>
 						<h3>Lorem ipsum</h3>
 						
-						<a href="{% url 'game_info_page' %}?img=2" class="cart-btn">More info</a>
+						<a href="{% url 'game_info_page' %}?img=6" class="cart-btn">More info</a>
 						<br>
 						<div style="display: flex; align-items: center;">
 							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
@@ -190,49 +191,7 @@
 						</div>
 						<h3>Lorem ipsum</h3>
 						
-						<a href="{% url 'game_info_page' %}?img=2" class="cart-btn">More info</a>
-						<br>
-						<div style="display: flex; align-items: center;">
-							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
-						</div>
-				</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="{% url 'game_info_page' %}?img=9"><img src="{% static 'img/Games/game9.png' %}" alt=""></a>
-						</div>
-						<h3>Lorem ipsum</h3>
-						
-						<a href="{% url 'game_info_page' %}?img=2" class="cart-btn">More info</a>
-						<br>
-						<div style="display: flex; align-items: center;">
-							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
-						</div>
-				</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="{% url 'game_info_page' %}?img=7"><img src="{% static 'img/Games/game7.png' %}" alt=""></a>
-						</div>
-						<h3>Lorem ipsum</h3>
-						
-						<a href="{% url 'game_info_page' %}?img=2" class="cart-btn">More info</a>
-						<br>
-						<div style="display: flex; align-items: center;">
-							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
-						</div>
-				</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center strawberry">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="{% url 'game_info_page' %}?img=10"><img src="{% static 'img/Games/game10.png' %}" alt=""></a>
-						</div>
-						<h3>Lorem ipsum</h3>
-						
-						<a href="{% url 'game_info_page' %}?img=2" class="cart-btn">More info</a>
+						<a href="{% url 'game_info_page' %}?img=3" class="cart-btn">More info</a>
 						<br>
 						<div style="display: flex; align-items: center;">
 							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
