--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -149,6 +149,7 @@ background: linear-gradient(95deg, rgba(21,232,237,0.6503195028011204) 0%, rgba(
 						</nav>
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
+						<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp</div>
 					</div>
 				</div>
 			</div>
