--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -214,6 +214,17 @@
 		box-shadow: 0 0 20px #e4e4e4
 }
 
+
+.footer-area {
+  padding: 30px 0px;
+  padding-top: 60px;
+}
+
+.pagination-wrap {
+  margin-top: 20px;
+  margin-right: -50px;
+}
+
     </style>
 
 </head>
@@ -264,6 +275,7 @@
 						</nav>
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
+						<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp</div>
 					</div>
 				</div>
 			</div>
