--- a/FrontEnd/templates/about.html
+++ b/FrontEnd/templates/about.html
@@ -134,6 +134,7 @@
 							</nav>
 							<div class="mobile-menu"></div>
 							<!-- menu end -->
+							<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp</div>
 						</div>
 					</div>
 				</div>
